// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initCONFIGS should fail with non-existing file 1`] = `
Object {
  "errorCode": "E_NO_CONFIG",
  "errorParams": Array [
    "/home/whoami/my-whook-project/src/config/development/config",
  ],
  "importerCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/config/development/config",
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🏭 - Initializing the CONFIGS service.",
    ],
    Array [
      "warning",
      "⚡ - Loading configurations from \\"/home/whoami/my-whook-project/src/config/development/config\\".",
    ],
    Array [
      "warning",
      "☢ - Could not load configuration file \\"/home/whoami/my-whook-project/src/config/development/config\\".",
    ],
  ],
}
`;

exports[`initCONFIGS should work with existing configs 1`] = `
Object {
  "CONFIGS": Object {
    "CONFIG": Object {
      "testConfig": "test",
    },
  },
  "importerCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/config/development/config",
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🏭 - Initializing the CONFIGS service.",
    ],
    Array [
      "warning",
      "⚡ - Loading configurations from \\"/home/whoami/my-whook-project/src/config/development/config\\".",
    ],
  ],
}
`;
